// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers actions bulkDeleteCustomer() 1`] = `
{
  "delete": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"ids":[1,2,3,4,5]}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "delete",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/customers/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`customers actions bulkDeleteCustomer() 2`] = `
[
  {
    "type": "BULK_DELETE_START",
  },
  {
    "ids": Immutable.List [
      1,
      2,
      3,
      4,
      5,
    ],
    "type": "BULK_DELETE_SUCCESS",
    "viewType": "customer-list",
  },
]
`;

exports[`customers actions create customer 1`] = `
[
  {
    "type": "SUBMIT_CUSTOMER_START",
  },
  {
    "isUpdate": false,
    "resp": {
      "data": {
        "email": "steve@acme.gorgias.io",
        "name": "Steve",
      },
    },
    "type": "SUBMIT_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions delete customer 1`] = `
[
  {
    "type": "DELETE_CUSTOMER_START",
  },
  {
    "customerId": 2,
    "type": "DELETE_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions fetch customer fetches customer 1`] = `
[
  {
    "type": "FETCH_CUSTOMER_START",
  },
  {
    "resp": {
      "data": {
        "id": 2,
      },
    },
    "type": "FETCH_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions merge customers 1`] = `
[
  {
    "type": "MERGE_CUSTOMERS_START",
  },
  {
    "resp": {
      "data": [
        {
          "id": 1,
        },
      ],
    },
    "type": "MERGE_CUSTOMERS_SUCCESS",
  },
]
`;

exports[`customers actions update customer 1`] = `
[
  {
    "type": "SUBMIT_CUSTOMER_START",
  },
  {
    "isUpdate": true,
    "resp": {
      "data": {
        "email": "steve@acme.gorgias.io",
        "id": 2,
        "name": "Steve",
      },
    },
    "type": "SUBMIT_CUSTOMER_SUCCESS",
  },
]
`;
